# Ax01-Image-Processor

./: Cargo.toml  Claude.md
src/: app.rs  main.rs
src/core/: dilatation.rs  erotion.rs  gaussian_background.rs  hsv_segmentation.rs  mod.rs  rgb_segmentation.rs  sobel.rs  threshold.rs
src/ui/: camera_worker.rs  effects.rs  image_loader.rs  mod.rs  theme.rs
src/ui/screens/: showcase.rs
src/ui/widgets/: button.rs  checkerboard.rs  image_pane.rs  mod.rs
