[package]
name = "proyect1"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui   = "0.31"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "tiff"] }
nokhwa = { version = "0.10.11", features = ["input-native"] }
rfd = "0.17"
